# draft

contrib/: bashrc  tmux.conf  vimrc
contrib/vim/: .gitignore
contrib/vim/colors/: vimos256.vim  yzlin.vim  yzlin256.vim
contrib/vim/doc/: tags
contrib/vim/ftdetect/: scriptpattern.vim
contrib/vim/ftplugin/: python.vim  scriptpattern.vim
contrib/vim/snippets/: python.snippets
contrib/vim/syntax/: python.vim  scriptpattern.vim
legacy/anyproc/: Makefile  anyproc_fuse.c  anyproc_fuse.h  anyproc_main.c  vfs.c  vfs.h
legacy/libusock/: Makefile.in  configure  configure.ac
legacy/libusock/.deps/: libusock.Plo
legacy/libusock/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
legacy/libusock/src/: Makefile.am  Makefile.in  libusock.c  libusock.h
legacy/mkinstaller/: mkinstaller.sh
legacy/old_shukp/: Makefile  config.sh  data.db  form.c  install.sh  jailer.c  readme.txt  register.sh  shukp.h  uninstall.sh  utility.sh
vimOS/: Makefile  common.mk
vimOS/cdiso/: Makefile  boot.txt  isolinux.cfg
vimOS/kernel/: Makefile  config  devlist.txt  install.sh
vimOS/live-cd/: Makefile
vimOS/system/: Makefile  init  packages.mk  replace_ld.sh  temp_toolchain.mk  toolchain.mk  toolchain_common.mk
